# vtol-interface

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  PROGRESS.txt  README.md  docker-compose.yml  install-neural-services.sh  justfile  problems.md  pyproject.toml  tasks.json
agent_bins/: python
docker/: ros2.dockerfile
dockerfiles/: log-streamer.dockerfile  px4-deps.dockerfile  px4-gazebo.dockerfile
helper_scripts/: analyze_policy.py
log_streamer/: __init__.py  main.py
scripts/: AGENTS.md  build.sh  clean.sh  docker_down.sh  docker_up.sh  neural_infer.sh  neural_mode.sh
services/: README.md  neural.target  neural_executor.service  neural_infer.service  ros2-liveness.service  sim-session.service  test.target  test_executor.service  test_executor_README.md
src/features/: __init__.py  feature_provider_base.py  revision_discoverer.py  vtol_feature_provider.py
src/isaac_pos_ctrl_neural/: CMakeLists.txt  README.md  package.xml  setup.py
src/isaac_pos_ctrl_neural/config/: pos_ctrl_params.yaml
src/isaac_pos_ctrl_neural/isaac_pos_ctrl_neural/: isaac_pos_ctrl_node.py  math_utils.py  set_target_pos.py
src/isaac_pos_ctrl_neural/launch/: isaac_pos_ctrl_launch.py
src/isaac_pos_ctrl_neural/models/: isaac_pos_ctrl.onnx  isaac_pos_ctrl.pt  isaac_pos_ctrl_noyaw.onnx
src/neural_manager/neural_executor/: CMakeLists.txt  package.xml
src/neural_manager/neural_inference/: math_utils.py  (+2 more)
src/neural_manager/neural_pos_ctrl/: CMakeLists.txt  README.md  math_utils.py  neural_infer.py  package.xml  setup.py
src/neural_manager/neural_pos_ctrl/conf/: pos_ctrl_config.yaml
src/neural_manager/neural_pos_ctrl/infer_utils/: action_post_processor.py  inference_provider.py  math_utils.py  tensorrt_actor.py
src/neural_manager/neural_pos_ctrl/infer_utils/observation/: __init__.py  composer.py  features.py  px4_adapter.py  registry.py  robot_state.py  schema.py
src/neural_manager/neural_pos_ctrl/launch/: pos_ctrl_launch.py
src/neural_manager/neural_pos_ctrl/neural_pos_ctrl/: __init__.py  math_utils.py  pos_ctrl_node.py
src/neural_manager/neural_utils/fake_network/: CMakeLists.txt  README.md  package.xml
src/neural_manager/neural_utils/fake_network/launch/: fake_network_node.launch.py
src/neural_manager/neural_utils/fake_network/src/: fake_network_node.cpp
test/integration/: test_missing_setup_path.py  test_pythonpath_inheritance.py  test_ros_diagnostics_verification.py  test_ros_distro_resolution.py
test/scenario/: test_executor_readiness.py  test_failure_handling.py  test_get_service_status.py  test_ros_distro_resolution.py  test_ros_setup_file_discovery.py  test_stream_merged_logs.py  test_stream_neural_executor_logs.py  test_stream_neural_infer_logs.py
test/unit/: test_argument_order_preservation.py  test_backward_compatibility.py  test_bootstrap_failure_exit.py  test_bootstrap_status_marker.py  test_ros_bootstrap_prepends_source.py  test_ros_distro_diagnostics.py  test_setup_path_diagnostics.py
tests/scenario/: test_export_revision_discoverer.py
(+58 files in other folders)
