<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neural_pos_ctrl</name>
  <version>1.0.0</version>
  <description>Isaac Position Control Neural Network Inference for PX4</description>
  <maintainer email="isaac.developer@example.com">Isaac Developer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-onnxruntime</depend>
  <depend>python3-pyyaml</depend>
  <depend>python3-scipy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>