<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fake_network</name>
  <version>1.0.0</version>
  <description>Fake Network Node for Neural Control Demo</description>
  <maintainer email="fake.network@example.com">Fake Network Maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>libyaml-cpp-dev</depend>
  <depend>eigen3_cmake_module</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>